# sdk-java

./: .gitignore  .protolint.yaml  CLAUDE.md  MIGRATION.md  README.md  buf.yaml  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.junie/: guidelines.md
.metals/: metals.lock.db  metals.mv.db
.tools/: exclusions-legacy-statemachine.yaml  run-sdk-tests.sh
admin-client/: build.gradle.kts
buildSrc/: build.gradle.kts
bytebuddy-proxy-support/: build.gradle.kts
client/: build.gradle.kts
client-kotlin/: build.gradle.kts
common/: build.gradle.kts
common-kotlin/: build.gradle.kts
config/: allowed-licenses.json  license-header  license-normalizer-bundle.json
development/: README.md  developer-guidelines.md  packages.puml  release.md
examples/: README.md  build.gradle.kts
gradle/: libs.versions.toml
protoc-gen-restate/: build.gradle.kts
protoc-gen-restate-java-blocking/: build.gradle.kts
sdk-aggregated-javadocs/: build.gradle.kts
sdk-api/: build.gradle.kts
sdk-api-gen/: build.gradle.kts
sdk-api-gen-common/: build.gradle.kts
sdk-api-kotlin/: build.gradle.kts
sdk-api-kotlin-gen/: build.gradle.kts
sdk-blocking/: build.gradle.kts
sdk-common/: build.gradle.kts
sdk-common-kotlin/: build.gradle.kts
sdk-core/: build.gradle.kts
sdk-core-impl/: build.gradle.kts
sdk-core-kotlin/: build.gradle.kts
sdk-core/src/main/rust/: Cargo.toml  build.rs
sdk-core/src/main/rust/src/: lib.rs  logging.rs  mem.rs
sdk-fake-api/: build.gradle.kts
sdk-http-vertx/: build.gradle.kts
sdk-interceptor-micrometer/: build.gradle.kts
sdk-interceptor-opentelemetry/: build.gradle.kts
sdk-java-blocking/: build.gradle.kts
sdk-java-http/: build.gradle.kts
sdk-java-lambda/: build.gradle.kts
sdk-jdk-future/: build.gradle.kts
sdk-kotlin/: build.gradle.kts
sdk-kotlin-http/: build.gradle.kts
sdk-kotlin-lambda/: build.gradle.kts
sdk-lambda/: build.gradle.kts
sdk-test/: build.gradle.kts
(+1195 files in other folders)
