[package]
name = "restate-sdk-shared-core-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
restate-sdk-shared-core = { git = "https://github.com/restatedev/sdk-shared-core", rev = "f24d7f2787ca1d93c013bba801f203fbad45a523", features = ["tracing_pretty"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
opt-level = 3
lto = true